@@ -1,3 +1,6 @@
+4872.	[bug]		Don't permit loading meta RR types such as TKEY
+			from master files. [RT #47009]
+
 4871.	[bug]		Fix configure glitch in detecting stdatomic.h
 			support on systems with multiple compilers.
 			[RT #46959]
